# project-group3

./: .gitignore  README.md  TZ.txt  pyproject.toml  requirements.txt
team_proj/: .example.env  .gitignore  Readme.md  docker-compose.yaml  manage.py
team_proj/contacts/: .gitignore  forms.py  models.py  urls.py  views.py  views.py~
team_proj/contacts/migrations/: 0001_initial.py  0002_alter_contact_email_alter_contact_phone.py  0003_contact_user.py
team_proj/contacts/static/contacts/: style.css  style.css~
team_proj/contacts/templates/contacts/: add_contact.html  base.html  edit_contact.html  index.html  search_contacts.html  upcoming_birthdays.html
team_proj/file_manager/: Readme.md  models.py  urls.py  views.py
team_proj/file_manager/migrations/: 0001_initial.py
team_proj/file_manager/static/file_manager/: style.css
team_proj/file_manager/templates/: file_list.html  upload_file.html
team_proj/file_manager/templates/file_manager/: base.html  file_list.html  file_search.html  upload_file.html
team_proj/file_manager/templatetags/: extract_file_name.py
team_proj/news/: urls.py  views.py
team_proj/notes/: admin.py  forms.py  models.py  urls.py  views.py
team_proj/notes/migrations/: 0001_initial.py  0002_note_name_note_tags_alter_note_description.py  0003_note_updated_at_alter_note_description_and_more.py  0004_tag_note_user_alter_note_tags.py
team_proj/tags/: models.py
team_proj/tags/migrations/: 0001_initial.py
team_proj/team_proj/: asgi.py  settings.py  urls.py  wsgi.py
team_proj/users/: forms.py  urls.py  views.py
(+15 files in other folders)
