[tool.poetry]
name = "personal assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
django-environ = "^0.12.0"
psycopg2 = "^2.9.10"
boto3 = "^1.37.12"
django-storages = "^1.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
